feat: vagrants structure refactory